--- a/index.html
+++ b/index.html
@@ -18,15 +18,16 @@
       font-family: 'Kumbh Sans', sans-serif;
       font-size: 18px;
       background-color: #1BA1AD;
-      position: relative;
+      margin: 0;
     }
 
     .card-profile {
-      width: 350px;
-      height: 350px;
+      width: 500px;
+      height: 500px;
       background-color: white;
-      margin: 0;
+      margin: auto;
       border-radius: 10px;
+      position: relative;
     }
 
     .weight {
@@ -36,6 +37,7 @@
     .attribution {
       font-size: 11px;
       text-align: center;
+      margin: 20px auto;
     }
 
     .attribution a {
@@ -55,6 +57,33 @@
     .bg-card {
       border-top-left-radius: 10px;
       border-top-right-radius: 10px;
+      width: 500px;
+    }
+
+    .top-container {
+      height: 100px;
+      width: 200px;
+    }
+
+    .image-victor {
+      height: 100px;
+      width: 100px;
+      border-radius: 50%;
+      position: relative;
+      margin: 0 200px;
+      bottom: 60px;
+    }
+
+    .personal-info {
+      text-align: center;
+    }
+
+    .bottom-container-card {
+      text-align: center;
+    }
+
+    hr {
+      margin: 30px;
     }
   </style>
 </head>
@@ -68,26 +97,40 @@
   <div class="card-profile">
     <img class="bg-card" src="./images/bg-pattern-card.svg" alt="img-card">
 
-    <span class="weight">Victor Crest</span>
-    26
-    London
+    <img class="image-victor" src="./images/image-victor.jpg" alt="img-card">
 
-    <span class="weight">80K</span>
-    Followers
+    <div class="personal-info">
+      <span class="weight">Victor Crest</span>
+      26
+      <br><br>
+      London
+    </div>
 
-    <span class="weight">803K</span>
-    Likes
+    <hr>
 
-    <span class="weight">1.4K</span>
-    Photos
+    <div class="bottom-container-card">
+      <span class="weight">80K</span>
+      Followers
+
+      <span class="weight">803K</span>
+      Likes
+
+      <span class="weight">1.4K</span>
+      Photos
+    </div>
+
 
   </div>
+
+  <!-- <div class="bottom-container">
+
+  </div> -->
 
   <!-- <img class="img-bottom" src="./images/bg-pattern-bottom.svg" alt="img-bottom"> -->
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Paulo Borges</a>.
   </div>
 </body>
 
