Organize statistics infos

--- a/index.html
+++ b/index.html
@@ -79,11 +79,34 @@
     }
 
     .bottom-container-card {
-      text-align: center;
     }
 
     hr {
       margin: 30px;
+      color: grey;
+
+    }
+
+    .followers {
+      width: 33%;
+      position: relative;
+      text-align: center;
+    }
+
+    .likes {
+      width: 33%;
+      text-align: center;
+      position: relative;
+      left: 33%;
+      bottom: 35px;
+    }
+
+    .photos {
+      width: 33%;
+      text-align: center;
+      position: relative;
+      left: 66%;
+      bottom: 70px;
     }
   </style>
 </head>
@@ -109,14 +132,24 @@
     <hr>
 
     <div class="bottom-container-card">
-      <span class="weight">80K</span>
-      Followers
+      <div class="followers">
+        <span class="weight">80K</span>
+        <br>
+        Followers
+      </div>
 
-      <span class="weight">803K</span>
-      Likes
+      <div class="likes">
+        <span class="weight">803K</span>
+        <br>
+        Likes
+      </div>
 
-      <span class="weight">1.4K</span>
-      Photos
+      <div class="photos">
+        <span class="weight">1.4K</span><br>
+        Photos
+      </div>
+
+
     </div>
 
 
