--- a/index.html
+++ b/index.html
@@ -16,14 +16,13 @@
   <style>
     body {
       font-family: 'Kumbh Sans', sans-serif;
-      font-size: 18px;
       background-color: #1BA1AD;
       margin: 0;
     }
 
     .card-profile {
-      width: 500px;
-      height: 500px;
+      width: 375px;
+      height: 375px;
       background-color: white;
       margin: auto;
       border-radius: 10px;
@@ -32,6 +31,7 @@
 
     .weight {
       font-weight: 700;
+      font-size: 18px;
     }
 
     .attribution {
@@ -57,7 +57,7 @@
     .bg-card {
       border-top-left-radius: 10px;
       border-top-right-radius: 10px;
-      width: 500px;
+      width: 375px;
     }
 
     .top-container {
@@ -66,25 +66,24 @@
     }
 
     .image-victor {
-      height: 100px;
-      width: 100px;
+      height: 85px;
+      width: 85px;
       border-radius: 50%;
       position: relative;
-      margin: 0 200px;
-      bottom: 60px;
+      margin: 0 150px;
+      bottom: 50px;
     }
 
     .personal-info {
       text-align: center;
     }
 
-    .bottom-container-card {
-    }
+    .bottom-container-card {}
 
     hr {
-      margin: 30px;
       color: grey;
-
+      margin-bottom: 30px;
+      border-width: .005px;
     }
 
     .followers {
@@ -108,6 +107,16 @@
       left: 66%;
       bottom: 70px;
     }
+
+    .grey {
+      color: hsl(0, 0%, 59%);
+      font-weight: 400;
+      font-size: 14px;
+    }
+
+    .margin-bottom {
+      margin-bottom: 5px;
+    }
   </style>
 </head>
 
@@ -123,10 +132,11 @@
     <img class="image-victor" src="./images/image-victor.jpg" alt="img-card">
 
     <div class="personal-info">
-      <span class="weight">Victor Crest</span>
-      26
-      <br><br>
-      London
+      <div class="margin-bottom">
+        <span class="weight">Victor Crest</span>
+        <span class="grey">26</span>
+      </div>
+      <span class="grey">London</span>
     </div>
 
     <hr>
@@ -135,18 +145,18 @@
       <div class="followers">
         <span class="weight">80K</span>
         <br>
-        Followers
+        <span class="grey">Followers</span>
       </div>
 
       <div class="likes">
         <span class="weight">803K</span>
         <br>
-        Likes
+        <span class="grey">Likes</span>
       </div>
 
       <div class="photos">
         <span class="weight">1.4K</span><br>
-        Photos
+        <span class="grey">Photos</span>
       </div>
 
 
